--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "grommet": "^2.7.9",
+    "grommet-icons": "^4.3.0",
+    "grommet-styles": "^0.2.0",
+    "polished": "^3.4.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-is": "^16.10.2",
     "react-scripts": "3.2.0",
-    "styled-components": "^5.0.0-beta.9"
+    "styled-components": "^5.0.0-beta.8-groupsizefix"
   },
   "scripts": {
     "start": "react-scripts start",
