--- a/package.json
+++ b/package.json
@@ -1,40 +1,42 @@
 {
-  "name": "section-scroll-experiment",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "grommet": "^2.7.9",
-    "grommet-icons": "^4.3.0",
-    "grommet-styles": "^0.2.0",
-    "polished": "^3.4.1",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-is": "^16.10.2",
-    "react-scripts": "3.2.0",
-    "styled-components": "^5.0.0-beta.8-groupsizefix"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "babel-plugin-macros": "^2.6.1"
-  }
+    "name": "section-scroll-experiment",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "grommet": "^2.7.9",
+        "grommet-icons": "^4.3.0",
+        "grommet-styles": "^0.2.0",
+        "polished": "^3.4.1",
+        "react": "^16.10.2",
+        "react-dom": "^16.10.2",
+        "react-is": "^16.10.2",
+        "react-scripts": "3.2.0",
+        "styled-components": "^5.0.0-beta.8-groupsizefix"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "deploy": "gh-pages -d build"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "babel-plugin-macros": "^2.6.1",
+        "gh-pages": "^2.1.1"
+    }
 }
