--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "section-scroll-experiment",
+    "homepage": "https://www.perspectivespace.com/section-scroll-experiment",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -18,6 +19,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
+        "predeploy": "npm run build",
         "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
